@@ -1,3 +1,6 @@
+* Dialer (ECCP): fix access to possibly-undefined property 'ActualChannel' when
+  looping through calls - ActualChannel is set OnLink, but loop also visits 
+  unlinked calls in progress. 
 * Dialer: subsys lock file must have the same name as the service in 
   /etc/init.d in order to shutdown properly.
 * Dialer (ECCP): fix copy/paste error in "getcampaignqueuewait" request on error
